<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Connected Garden</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_meu_jardim">Meu Jardim</string>
    <string name="action_novoVaso">Novo Vaso</string>
    <string name="action_atualizar">Atualizar</string>
    <string name="LabelAtualizar">Data da última atualização</string>
    <string name="Hint_Descricao">Descricao</string>
    <string name="LabelUmidadeSolo">Umid. Solo</string>
    <string name="LabelUmidadeAr">Umid. Ar</string>
    <string name="LabelLuminosidade">Luz</string>
    <string name="LabelTemperatura">Temp.</string>
    <string name="LabelDescricaoPlanta">Planta</string>
    <string name="LabelTipoAlerta">Tipo de Alerta</string>
    <string name="LabelAtivo">Ativo</string>
    <string name="title_activity_meus_alertas">Meus Alertas</string>
    <string name="title_activity_meu_cadastro">Meu Cadastro</string>
    <string name="title_activity_login">Login</string>
    <string name="LabelRecuperarSenha">Recuperar senha</string>
    <string name="LabelCadastrar">Cadastrar</string>
    <string name="LabelLogin">Login</string>
    <string name="LabelSenha">Senha</string>
    <string name="LabelNome">Nome</string>
    <string name="LabelNick">Nick</string>
    <string name="LabelEmail">E-Mail</string>
    <string name="TextBTConfirmar">Confirmar</string>
    <string name="LabelConfirmarSenha">Confirmar Senha</string>
    <string name="title_activity_sobre">Sobre</string>
    <string name="LabelDesenvolvimento">Desenvolvimento</string>
    <string name="LabelDesignInterface">Design Interface</string>
    <string name="LabelOrientadores">Orientadores</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="title_activity_editar_vaso">Editar_vaso</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_configuracoes">Configuracoes</string>
    <string name="Menu_NovoVaso">Novo Vaso</string>
    <string name="Menu_Alerta">Novo Alerta</string>
    <string name="Menu_ParearVaso">Parear Vasos</string>
    <string name="title_activity_novo_vaso">NovoVasoActivity</string>
    <string name="title_activity_cadastrar_alerta">CadastrarAlertaActivity</string>
    <string name="title_activity_pareados">dispositivos pareados</string>
    <string name="title_activity_disp_pareados">Dispositivos Pareados</string>
    <string name="buscar_vasos">buscar</string>
    <string name="title_activity_cadastrar_vaso">Cadastrar Vaso</string>
    <string name="title_activity_procurar_dispositivos_bluetooth">Pesquisar novos vasos</string>
    <string name="LabelMac">MAC</string>
    <string name="atualizar_vaso">Atualizar valores</string>
    <string name="title_activity_visualizar_vaso">Visualizar Vasos</string>
    <string name="action_editar">Editar Vaso</string>
    <string name="action_excluir_vaso">Excluir</string>
    <string name="action_excluir_atualizar">Atualizar</string>
    <string name="action_regar_vaso">Regar</string>

</resources>
