<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.ufrn.jardim.appjardim.CadastrarVaso">

    <include
        android:id="@+id/toolbar_CadastrarVaso"
        layout="@layout/toolbar_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Hint_Descricao"
        android:id="@+id/textView11"
        android:layout_below="@+id/toolbar_CadastrarVaso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editDescricao"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LabelMac"
        android:id="@+id/textView12"
        android:layout_below="@+id/editDescricao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editMac"
        android:layout_below="@+id/textView12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:enabled="true"
        android:editable="false" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LabelTemperatura"
        android:layout_below="@+id/editMac"
        android:id="@+id/textView13"
        android:layout_column="0" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTemp"
        android:maxWidth="30dp"
        android:layout_below="@+id/editMac"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView14"
        android:layout_marginLeft="41dp"
        android:layout_marginStart="41dp"
        android:layout_toRightOf="@+id/textView14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LabelUmidadeSolo"
        android:id="@+id/textView14"
        android:layout_column="0"
        android:layout_below="@+id/editTemp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editUmidSolo"
        android:maxWidth="30dp"
        android:layout_alignTop="@+id/textView14"
        android:layout_toRightOf="@+id/textView14"
        android:layout_marginLeft="42dp"
        android:layout_marginStart="42dp"
        android:layout_alignRight="@+id/editTemp"
        android:layout_alignEnd="@+id/editTemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LabelUmidadeAr"
        android:id="@+id/textView15"
        android:layout_column="0"
        android:layout_below="@+id/editUmidSolo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editUmidAr"
        android:maxWidth="30dp"
        android:layout_alignTop="@+id/textView15"
        android:layout_alignLeft="@+id/editUmidSolo"
        android:layout_alignStart="@+id/editUmidSolo"
        android:layout_alignRight="@+id/editUmidSolo"
        android:layout_alignEnd="@+id/editUmidSolo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LabelLuminosidade"
        android:id="@+id/textView16"
        android:layout_column="0"
        android:layout_below="@+id/editUmidAr"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editLuz"
        android:maxWidth="30dp"
        android:layout_alignTop="@+id/textView16"
        android:layout_alignLeft="@+id/editUmidAr"
        android:layout_alignStart="@+id/editUmidAr"
        android:layout_alignRight="@+id/editUmidAr"
        android:layout_alignEnd="@+id/editUmidAr" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LabelCadastrar"
        android:id="@+id/btCadastrarPlanata"
        android:layout_below="@+id/editLuz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:onClick="cadastrarVaso"
        />


</RelativeLayout>
